--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.font-size-40px {
+  font-size: 40px;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.Header {
+  margin-left: calc(1450px - 1310px);
+  height: 48px;
+  width: 1310px;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.default-p {
+  color: #777e90;
+  font-weight: 400;
 }
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.first-on-page {
+  padding-top: 74px;
+}
+a,
+input {
+  outline: none;
 }
